--- a/public/css/project.less
+++ b/public/css/project.less
@@ -52,7 +52,7 @@
 .bigquestion {
     text-align: center;
     p {
-        font-size: 24px;
+        font-size: 1.3em;
         font-family: 'Graphik Italic';
     }
 }
